<resources>
    <string name="app_name">FoodDeliver</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome_back_login_text">Welcome back! Enter your login details</string>
    <string name="terms_condition_and_privacy_policy">
        <![CDATA[By login you agreed with Neqsa\'s terms & conditions \n and privacy policies.]]></string>
    <string name="email_mobile">Email/Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="donot_have_acct_signup">Don\'t have an account ?</string>
    <string name="tell_me_about_u">Tell me more about you</string>

    <string name="register">Register</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="otp_verfi">OTP Verification</string>
    <string name="please_type_verif_code">Please type verification sent to</string>
    <string name="resend_otp">Resend OTP</string>

    <string name="camera">Camera</string>
    <string name="camera_storage">Camera &amp; Storage</string>
    <string name="choose_gallery">Choose from gallery</string>
    <string name="select_your_choice">Select your choice:</string>
    <string name="permission_req">Permissions required</string>

    <string name="skip">Skip</string>
    <string name="image_picker_dialog_camera">Camera</string>
    <string name="image_picker_dialog_gallery">Gallery</string>
    <string name="image_picker_dialog_select_your_choice">Select your choice</string>
    <string name="permission_camera_denied">Camera Permission denied</string>
    <string name="requested">Requested</string>
    <string name="confirmed">Confirmed</string>

    <!--Location Permission check-->
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_label_settings">Allow FoodDriver to access your location</string>
    <string name="permission_btn_allow">Allow</string>
    <string name="permission_btn_deny">Deny</string>
    <string name="permission_rational_external_storage">Allow FoodDriver to access your storage</string>
    <string name="permission_denied_location">Please allow location Permission to access</string>
    <string name="permission_never_ask_again_location">Never ask again for location permission</string>
    <string name="permission_never_ask_again_storage">Never ask again for storage permission</string>

    <string name="ok">OK</string>
    <string name="internet">Internet</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="delivered">Delivered</string>
    <string name="rate_order">Rate Order</string>
    <string name="re_order">Re-Order</string>
    <string name="view_receipt">View Receipt</string>
    <string name="get_help">Get Help</string>
    <string name="sign_up">Sign up</string>
    <string name="delivery_detail">Delivery Details</string>
    <string name="search_new_address">Search a new address</string>
    <string name="current_location">Current Location</string>
    <string name="fail_to_get_loc">Fail to find your current location \nplease turn on your location</string>
    <string name="saved_address">Saved addresses</string>
    <string name="schedule_order">Schedule an order</string>
    <string name="as_soon_as">As soon as possible</string>
    <string name="when">When</string>
    <string name="add_new">Add New</string>
    <string name="any_suggestion">Any Suggestion? We will pass it to restuarant</string>
    <string name="offer_discount">Offer Discount</string>
    <string name="new_amt_paid">Net Amount to be paid</string>
    <string name="apply_promo_code">Apply promo code</string>
    <string name="deliver">Deliver</string>
    <string name="dummy_add">Code Brew Labs, Arth Parkash Building Sector 29 D, Chandigarh 160030</string>
    <string name="edit">Edit</string>
    <string name="self_pickup">Self Pickup</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="change">Change</string>
    <string name="total_amt_paid">Total Amount to be paid</string>
    <string name="select_option">Select an option to pay balance amount</string>
    <string name="pay_method">Payment Method</string>
    <string name="knet">KNET</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="place_this_order">Place this order</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="add">+  Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="log_in">Log In</string>
    <string name="already_registered">Already registered?</string>
    <string name="signup_caps">SignUp</string>
    <string name="set_pwd">Set a Password</string>
    <string name="terms_condition_and_privacy_policy_signup"><![CDATA[By creating your account, you agree with Neqsa’s terms & conditions  and privacy policies.]]></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="foodie_point">Foodie Points</string>
    <string name="explore_rest_dish_etc">Explore restaurants, dishes etc</string>
    <string name="orders">Orders</string>
    <string name="upcoming_past_orders">Your upcoming and past orders</string>
    <string name="language">Language</string>
    <string name="select_language">Select your preferred language</string>
    <string name="address">Address</string>
    <string name="add_edit_add">Add, edit or remove your address</string>
    <string name="about_us">About Us</string>
    <string name="get_to_know_about_us">Get to know about us</string>
    <string name="help">Help</string>
    <string name="we_are_here_to_help">We are here to help you</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update">Update</string>
    <string name="about_neqsa_app">About Neqsa app</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="write_down_your_msg">Write down your message...</string>
    <string name="call">Call</string>
    <string name="addresses">Addresses</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="track">Track</string>
    <string name="preparing_order">Preparing Order</string>


    <string name="please_rate_the_food">Please rate the food</string>
    <string name="rating_inspect_food_quality">Your rating will impact the restaurant’s food quality and will help restaurant to make food with better quality.</string>
    <string name="please_rate_the_rest">Please rate the restaurant</string>
    <string name="rest_rating_text">Your rating will impact the restaurant’s overall rating and will help others make better choices</string>
    <string name="please_rate_delivery_boy">Please rate the delivery boy’s service</string>
    <string name="ur_feedback_will_improve_him">Your feedback will help him improve</string>
    <string name="was_order_on_time">Was order on time?</string>
    <string name="your_feedback">Let us know your feedback.</string>
    <string name="submit">Submit</string>
    <string name="track_order">Track order</string>
    <string name="your_order_picked">Your order is picked</string>
    <string name="order_picked_by_driver">Order is picked by driver</string>
    <string name="rest_preparing_order">Restaurant is  preparing order</string>
    <string name="order_accepted">Order accepted</string>
    <string name="delivery_partner">Delivery partner</string>
    <string name="contact">Contact</string>
    <string name="restaurants">Restaurants</string>
    <string name="dishs">Dishes</string>
</resources>
