<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_bell"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/home" />

    <item android:id="@+id/nav_explore"
        android:icon="@drawable/ic_bell"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/explore"/>

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_bell"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_bell"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/profile" />

</menu>