<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.authenticate.LoginActivity">

    <include
        android:id="@+id/incLayout"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_thirty"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incLayout" />

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:text="@string/welcome_back_login_text"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/text_small"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlEmailMob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_three"
        android:layout_marginTop="@dimen/margin_seventy_two"
        android:layout_marginEnd="@dimen/margin_twenty_three"
        android:theme="@style/HintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmailMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_mobile"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/text_small" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_three"
        android:layout_marginTop="@dimen/margin_thirty"
        android:layout_marginEnd="@dimen/margin_twenty_three"
        android:theme="@style/HintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlEmailMob">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_three"
        android:layout_marginEnd="@dimen/margin_twenty_three"
        android:padding="@dimen/padding_ten"
        android:text="@string/forgot_password"
        android:textColor="@color/pink"
        android:textSize="@dimen/text_small"
        android:fontFamily="@font/sf_pro_text_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlPwd" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_forty_eight"
        android:layout_marginStart="@dimen/margin_twenty_three"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty_three"
        android:layout_marginBottom="@dimen/margin_sixteen"
        android:background="@drawable/rounded_rec_pink"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPwd" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:padding="@dimen/padding_ten"
            android:text="@string/donot_have_acct_signup"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:paddingTop="@dimen/padding_ten"
            android:paddingRight="@dimen/padding_ten"
            android:paddingBottom="@dimen/padding_ten"
            android:text="@string/sign_up"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_forty"
        android:gravity="center"
        android:text="@string/terms_condition_and_privacy_policy"
        android:textColor="@color/white"
        android:textSize="@dimen/text_extra_small"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>