<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DeliveryDetailsActivity">

    <include
        android:id="@+id/incLayout"
        layout="@layout/toolbar_layout"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etSearchNewAdd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/margin_eight"
        android:background="@color/white"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_bell"
        android:drawablePadding="@dimen/margin_eight"
        android:hint="@string/search_new_address"
        android:paddingLeft="20dp"
        android:textColor="@color/search_text_color"
        android:textColorHint="@color/search_text_color"
        android:textCursorDrawable="@drawable/cursor_blackish"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@+id/incLayout" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/curLoc"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="@dimen/margin_eight"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etSearchNewAdd">

        <TextView
            android:id="@+id/tvRestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_twenty"
            android:layout_marginTop="@dimen/margin_eight"
            android:drawableStart="@drawable/ic_bell"
            android:drawablePadding="@dimen/margin_eight"
            android:text="@string/current_location"
            android:textColor="@color/location_text_color"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFailedLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="@dimen/margin_four"
            android:drawablePadding="@dimen/margin_eight"
            android:text="@string/fail_to_get_loc"
            android:textColor="@color/search_text_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRestName" />

    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/tvSaveAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_eight"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_bell"
        android:drawablePadding="@dimen/margin_eight"
        android:paddingLeft="@dimen/padding_twenty"
        android:paddingTop="@dimen/padding_sixteen"
        android:text="@string/saved_address"
        android:textColor="@color/location_text_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curLoc" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_bell"
        android:drawablePadding="@dimen/margin_eight"
        android:gravity="top"
        android:paddingLeft="52dp"
        android:paddingTop="@dimen/padding_sixteen"
        android:paddingBottom="@dimen/padding_twenty"
        android:text="3065 Kirlin Prairie Suite 200, Sector 29D,\n oppo. Tribune colony Chandigarh \n160030"
        android:textColor="@color/search_text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaveAddress" />

    <TextView
        android:id="@+id/tvWhen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_eight"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_bell"
        android:drawablePadding="@dimen/margin_eight"
        android:paddingLeft="@dimen/padding_twenty"
        android:paddingTop="@dimen/padding_sixteen"
        android:text="@string/when"
        android:textColor="@color/location_text_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/tvAsSoonAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_bell"
        android:drawablePadding="@dimen/margin_eight"
        android:paddingLeft="52dp"
        android:paddingTop="@dimen/padding_sixteen"
        android:text="@string/as_soon_as"
        android:textAllCaps="true"
        android:textColor="@color/search_text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhen" />

    <TextView
        android:id="@+id/tvSchdduleOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_bell"
        android:drawablePadding="@dimen/margin_eight"
        android:paddingLeft="52dp"
        android:paddingTop="@dimen/padding_sixteen"
        android:paddingBottom="@dimen/padding_twenty"
        android:text="@string/schedule_order"
        android:textAllCaps="true"
        android:textColor="@color/search_text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsSoonAs" />

</android.support.constraint.ConstraintLayout>