<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_sixty_four"
    android:layout_marginEnd="@dimen/margin_sixty_four"
    android:layout_gravity="center">



    <TextView
        android:id="@+id/tvPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rd_pink_top_rec"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center"
        android:paddingTop="@dimen/padding_twelve"
        android:paddingBottom="@dimen/padding_twelve"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvArabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingLeft="@dimen/padding_eight"
        android:paddingTop="@dimen/padding_twelve"
        android:paddingBottom="@dimen/padding_twelve"
        android:text="@string/arabic"
        android:drawableRight="@drawable/lang_tick_padding"
        android:textColor="@color/newvigation_text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNum" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_one"
        android:background="@color/view_color"
        app:layout_constraintTop_toBottomOf="@+id/tvArabic"
        app:layout_constraintBottom_toTopOf="@+id/tvEnglish"/>

    <TextView
        android:id="@+id/tvEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rd_white_btm_rec"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingLeft="@dimen/padding_eight"
        android:paddingTop="@dimen/padding_twelve"
        android:paddingBottom="@dimen/padding_twelve"
        android:text="@string/english"
        android:drawableRight="@drawable/lang_tick_padding"
        android:textColor="@color/newvigation_text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintTop_toBottomOf="@+id/tvArabic" />


</android.support.constraint.ConstraintLayout>