<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.authenticate.OtpVerifActivity">

    <include
        android:id="@+id/incLayout"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_thirty"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvOtpVerf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:text="@string/otp_verfi"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incLayout" />

    <TextView
        android:id="@+id/tvOtpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:text="@string/please_type_verif_code"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpVerf" />

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_five"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:text="+(012) 3456789"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpText" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_seventy_five"
        android:gravity="center"
        app:cursorVisible="false"
        app:forceKeyboard="false"
        app:hint="0"
        app:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginText"
        app:password="false"
        app:pinBackground="@drawable/rounded_rec_black"
        app:pinHeight="40dp"
        app:pinLength="4"
        app:pinWidth="40dp" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_five"
        android:layout_marginRight="@dimen/margin_twenty_four"
        android:layout_marginBottom="@dimen/margin_thirty_four"
        android:padding="@dimen/padding_ten"
        android:text="@string/resend_otp"
        android:textColor="@color/pink"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_forty_eight"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_forty"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:layout_marginBottom="@dimen/margin_one_hundred"
        android:background="@drawable/rounded_rec_pink"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>