<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rec_bg_white"
    android:layout_marginStart="@dimen/margin_sixty_four"
    android:layout_marginEnd="@dimen/margin_sixty_four"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center"
        android:paddingTop="@dimen/padding_twelve"
        android:paddingBottom="@dimen/padding_twelve"
        android:text="@string/language"
        android:textColor="@color/newvigation_text_color"
        android:textSize="@dimen/text_medium_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_one"
        android:background="@color/view_color"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/rd_white_btm_rec"
        app:layout_constraintTop_toBottomOf="@+id/viewPhoneNum">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingLeft="@dimen/padding_eight"
            android:paddingTop="@dimen/padding_twelve"
            android:paddingBottom="@dimen/padding_twelve"
            android:text="@string/cancel"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/text_medium"
            android:gravity="center"/>

        <View
            android:layout_width="@dimen/view_one"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingLeft="@dimen/padding_eight"
            android:paddingTop="@dimen/padding_twelve"
            android:paddingBottom="@dimen/padding_twelve"
            android:text="@string/call"
            android:gravity="center"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
